examples/test/testpolicy10950.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10950
  namespace: namespace397
spec:
  podSelector:
    matchLabels:
      key33: value19
      key6: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value4
          key14: value38
      podSelector:
        matchLabels:
          key17: value46
          key25: value14
